--- a/res/css/index.css
+++ b/res/css/index.css
@@ -9,7 +9,7 @@
 
 body {
   font-family: 'Roboto', sans-serif;
-  font-size: 0.85rem;
+  font-size: 1rem;
   display: grid;
   background-color: #195fc9;
   grid-template-rows: auto 1fr auto;
@@ -245,7 +245,7 @@ a {
   text-underline-offset: 5px;
 }
 
-/*home-sction*/
+/*home-section*/
 .home-section{
   background-color: #f9f9f9;
 }
@@ -413,7 +413,7 @@ a {
   }
 }
 
-/*Home and carosel*/
+
 /*Button*/
 .btn{
   background-color: transparent;
@@ -427,7 +427,14 @@ a {
   font-size: 16px;
   margin: 20px 0;
 }
-
+#btn-back-to-top {
+  position: fixed;
+  bottom: 20px; 
+  right: 20px; 
+  display: none;
+  z-index: 1000; 
+  border:none;
+}
 .btn:hover{
   background-color: white;
   color: black;
@@ -440,7 +447,7 @@ a {
   position: relative;
   overflow: hidden;
   width: 100%;
-  max-width: 100vw;
+  max-width: 100%;
   height: 700px;
   margin: auto;
 }
@@ -467,10 +474,12 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
+  line-height: 1rem;
   color: #fff;
   padding: 4em;
   box-sizing: border-box;
   width: 30%;
+  left: 0;
 }
 
 img {
